--- a/history.html
+++ b/history.html
@@ -50,29 +50,42 @@
             <ul class="m-0 pl-md-3">
               <li class="d-flex align-items-center py-4 active">
                 <img src="/asset/home/grid.png" />
-                <a href="home.html" class="ml-3 text-nuni"> Dashboard </a>
+                <a href="home.html" class="ml-3 text-nuni text-decoration-none">
+                  Dashboard
+                </a>
               </li>
 
               <li class="d-flex align-items-center py-4">
                 <img src="/asset/home/arrow-up.png" />
-                <a href="search.html" class="ml-3 text-nuni"> Transfer </a>
+                <a
+                  href="search.html"
+                  class="ml-3 text-nuni text-decoration-none"
+                >
+                  Transfer
+                </a>
               </li>
 
               <li class="d-flex align-items-center py-4">
                 <img src="/asset/home/plus.png" />
-                <a href="#" class="ml-3 text-nuni"> Top Up </a>
+                <a href="#" class="ml-3 text-nuni text-decoration-none">
+                  Top Up
+                </a>
               </li>
 
               <li class="d-flex align-items-center py-4">
                 <img src="/asset/home/user.png" />
-                <a href="#" class="ml-3 text-nuni"> Profile </a>
+                <a href="#" class="ml-3 text-nuni text-decoration-none">
+                  Profile
+                </a>
               </li>
             </ul>
 
             <ul class="m-0 pl-md-3">
               <li class="d-flex align-items-center py-2">
                 <img src="/asset/home/log-out.png" />
-                <a href="#" class="ml-3 text-nuni"> Logout </a>
+                <a href="#" class="ml-3 text-nuni text-decoration-none">
+                  Logout
+                </a>
               </li>
             </ul>
           </div>
@@ -82,8 +95,8 @@
         <div class="col-lg-9 pl-lg-2">
           <div class="bg-white rounded-14 h-100">
             <div class="d-flex flex-column px-4 py-2">
-              <h6 class="font-weight-bold my-3">Transaction History</h6>
-              <h6 class="small my-0 text-third">This Week</h6>
+              <h4 class="font-weight-bold my-3">Transaction History</h4>
+              <h6 class="my-0 text-third">This Week</h6>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="d-flex flex-row align-items-center my-4">
                   <img
@@ -114,7 +127,7 @@
                 </div>
                 <h5 class="text-danger font-weight-bold">+ Rp.50.000</h5>
               </div>
-              <h6 class="small my-3 text-third">This Month</h6>
+              <h6 class="my-3 text-third">This Month</h6>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="d-flex flex-row align-items-center my-4">
                   <img
