--- a/suc-d.html
+++ b/suc-d.html
@@ -95,50 +95,53 @@
           <div class="bg-white rounded-14 h-100">
             <div class="d-flex flex-column px-4 py-2">
               <!-- copy -->
-              <h5 class="text-nuni txt-bold my-3">Search Receiver</h5>
-              <div class="input-container">
-                <img src="asset/history/search.png" alt="" srcset="" />
-                <input type="text" class="input-search ml-2" />
+              <div class="d-flex flex-column align-items-center mt-5">
+                <div>
+                  <img src="/asset/success/success.png" alt="" srcset="" />
+                </div>
+                <h6 class="text-nuni txt-bold my-2">Transfer Success</h6>
               </div>
-              <div class="bg-white shadow-sm mt-4 p-3 rounded-14">
-                <a href="confirm-d.html" class="text-decoration-none">
-                  <div class="d-flex flex-row align-items-center">
-                    <img src="/asset/history/1.png" alt="" />
-                    <div class="ml-3">
-                      <div class="text-nuni txt-bold">Samuel Suhi</div>
-                      <div class="small text-nuni">+62 813-8492-9994</div>
-                    </div>
-                  </div>
-                </a>
+              <div class="bg-white shadow-sm mt-2 pl-4 py-2 rounded-14">
+                <div class="d-flex flex-column">
+                  <div class="small txt-third mb-2">Amount</div>
+                  <h5 class="text-nuni txt-bold">Rp. 100.000</h5>
+                </div>
               </div>
-              <div class="bg-white shadow-sm mt-4 p-3 rounded-14">
+              <div class="bg-white shadow-sm mt-2 pl-4 py-2 rounded-14">
+                <div class="d-flex flex-column">
+                  <div class="text-nuni small txt-third mb-2">Balance Left</div>
+                  <h5 class="text-nuni txt-bold">Rp. 20.000</h5>
+                </div>
+              </div>
+              <div class="bg-white shadow-sm mt-2 pl-4 py-2 rounded-14">
+                <div class="d-flex flex-column">
+                  <div class="text-nuni small txt-third mb-2">Date & Time</div>
+                  <h5 class="text-nuni txt-bold">May 11, 2020 - 12.20</h5>
+                </div>
+              </div>
+              <div class="bg-white shadow-sm mt-2 mb-4 pl-4 py-2 rounded-14">
+                <div class="d-flex flex-column">
+                  <div class="small txt-third mb-2">Notes</div>
+                  <h5 class="text-nuni txt-bold">For buying some socks</h5>
+                </div>
+              </div>
+              <h6 class="text-nuni txt-bold mt-3">Transfer To</h6>
+              <div class="bg-white shadow-sm mt-1 p-3 rounded-14">
                 <div class="d-flex flex-row align-items-center">
-                  <img src="/asset/history/2.png" alt="" />
+                  <img src="/asset/history/1.png" alt="" />
                   <div class="ml-3">
-                    <div class="text-nuni txt-bold">Momo Taro</div>
-                    <div class="small text-nuni">+62 812-4343-6731</div>
+                    <div class="text-nuni txt-bold">Samuel Suhi</div>
+                    <div class="small text-nuni">+62 813-8492-9994</div>
                   </div>
                 </div>
               </div>
-              <div class="bg-white shadow-sm mt-4 p-3 rounded-14">
-                <div class="d-flex flex-row align-items-center">
-                  <img src="/asset/history/3.png" alt="" />
-                  <div class="ml-3">
-                    <div class="text-nuni txt-bold">Jessica Keen</div>
-                    <div class="small text-nuni">+62 811-3452-5252</div>
-                  </div>
-                </div>
-              </div>
-              <div class="bg-white shadow-sm my-4 p-3 rounded-14">
-                <div class="d-flex flex-row align-items-center">
-                  <img src="/asset/history/Rectangle 25.png" alt="" />
-                  <div class="ml-3">
-                    <div class="text-nuni txt-bold">Michael Le</div>
-                    <div class="small text-nuni">+62 810-4224-4613</div>
-                  </div>
-                </div>
-              </div>
-
+              <button
+                class="btn bg-primaryy align-self-end mt-4 mb-3 py-2 px-5 text-white rounded-10"
+                data-toggle="modal"
+                data-target="#modal-id"
+              >
+                Continue
+              </button>
               <!-- end copy -->
             </div>
           </div>
