--- a/home.html
+++ b/home.html
@@ -50,29 +50,42 @@
             <ul class="m-0 pl-md-3">
               <li class="d-flex align-items-center py-4 active">
                 <img src="/asset/home/grid.png" />
-                <a href="home.html" class="ml-3 text-nuni"> Dashboard </a>
+                <a href="home.html" class="ml-3 text-nuni text-decoration-none">
+                  Dashboard
+                </a>
               </li>
 
               <li class="d-flex align-items-center py-4">
                 <img src="/asset/home/arrow-up.png" />
-                <a href="success.html" class="ml-3 text-nuni"> Transfer </a>
+                <a
+                  href="search.html"
+                  class="ml-3 text-nuni text-decoration-none"
+                >
+                  Transfer
+                </a>
               </li>
 
               <li class="d-flex align-items-center py-4">
                 <img src="/asset/home/plus.png" />
-                <a href="#" class="ml-3 text-nuni"> Top Up </a>
+                <a href="#" class="ml-3 text-nuni text-decoration-none">
+                  Top Up
+                </a>
               </li>
 
               <li class="d-flex align-items-center py-4">
                 <img src="/asset/home/user.png" />
-                <a href="#" class="ml-3 text-nuni"> Profile </a>
+                <a href="#" class="ml-3 text-nuni text-decoration-none">
+                  Profile
+                </a>
               </li>
             </ul>
 
             <ul class="m-0 pl-md-3">
               <li class="d-flex align-items-center py-2">
                 <img src="/asset/home/log-out.png" />
-                <a href="#" class="ml-3 text-nuni"> Logout </a>
+                <a href="#" class="ml-3 text-nuni text-decoration-none">
+                  Logout
+                </a>
               </li>
             </ul>
           </div>
@@ -135,7 +148,9 @@
                   <div class="font-weight-bold text-nuni">
                     Transaction History
                   </div>
-                  <a href="#" class="small text-primaryy text-nuni">See all</a>
+                  <a href="history.html" class="small text-primaryy text-nuni"
+                    >See all</a
+                  >
                 </div>
                 <div
                   class="d-flex justify-content-between align-items-center py-3"
