--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
       integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="asset/css/index.css" />
+    <link rel="stylesheet" href="asset/css/style.css" />
   </head>
   <body>
     <div class="container-fluid mx-0 bg-white">
       <div class="row">
-        <div class="fiture col-7 p-0">
+        <div class="fiture col-6 p-5">
           <h4>Zwallet</h4>
           <img
             src="./asset/login/bg-img.png"
@@ -31,7 +32,7 @@
             users coverage.
           </div>
         </div>
-        <div class="col-5 bg-warning"></div>
+        <div class="col-6 bg-warning"></div>
       </div>
     </div>
 
