--- a/search.html
+++ b/search.html
@@ -101,7 +101,7 @@
                 <input type="text" class="input-search ml-2" />
               </div>
               <div class="bg-white shadow-sm mt-4 p-3 rounded-14">
-                <a href="confirm-d.html" class="text-decoration-none">
+                <a href="confirmation.html" class="text-decoration-none">
                   <div class="d-flex flex-row align-items-center">
                     <img src="/asset/history/1.png" alt="" />
                     <div class="ml-3">
