--- a/home.html
+++ b/home.html
@@ -130,12 +130,12 @@
               <div class="bg-white rounded-14 p-4">
                 <div class="row">
                   <div class="col-6">
-                    <img src="" alt="" />
+                    <img src="asset/home/arrow-up.svg" alt="" />
                     <div class="small my-2 text-nuni">Income</div>
                     <div class="font-weight-bold text-nuni">Rp.2.120.000</div>
                   </div>
                   <div class="col-6">
-                    <img src="" alt="" />
+                    <img src="asset/home/arrow-down.svg" alt="" />
                     <div class="small my-2 text-nuni">Expense</div>
                     <div class="font-weight-bold text-nuni">Rp.1.560.000</div>
                   </div>
