--- a/home.html
+++ b/home.html
@@ -83,7 +83,7 @@
             <ul class="m-0 pl-md-3">
               <li class="d-flex align-items-center py-2">
                 <img src="/asset/home/log-out.png" />
-                <a href="#" class="ml-3 text-nuni text-decoration-none">
+                <a href="index.html" class="ml-3 text-nuni text-decoration-none">
                   Logout
                 </a>
               </li>
