--- a/success.html
+++ b/success.html
@@ -83,7 +83,10 @@
             <ul class="m-0 pl-md-3">
               <li class="d-flex align-items-center py-2">
                 <img src="/asset/home/log-out.png" />
-                <a href="#" class="ml-3 text-nuni text-decoration-none">
+                <a
+                  href="index.html"
+                  class="ml-3 text-nuni text-decoration-none"
+                >
                   Logout
                 </a>
               </li>
@@ -135,13 +138,30 @@
                   </div>
                 </div>
               </div>
-              <button
-                class="btn bg-primaryy align-self-end mt-4 mb-3 py-2 px-5 text-white rounded-10"
-                data-toggle="modal"
-                data-target="#modal-id"
-              >
-                Continue
-              </button>
+              <div class="d-flex align-self-end">
+                <a href="#" class="">
+                  <button
+                    class="btn bg-white10 mt-4 mx-2 mb-3 py-2 px-4 text-white rounded-10"
+                  >
+                    <img src="asset/success/share-2.png" alt="" />
+                  </button>
+                </a>
+                <a href="#" class="">
+                  <button
+                    class="btn bg-white10 mt-4 ml-2 mb-3 py-2 px-4 text-primaryy rounded-10"
+                  >
+                    <img src="asset/success/download.png" alt="" />
+                    Download PDF
+                  </button>
+                </a>
+                <a href="home.html" class="">
+                  <button
+                    class="btn bg-primaryy mt-4 mx-2 mb-3 py-2 px-4 text-white rounded-10"
+                  >
+                    Back to Home
+                  </button>
+                </a>
+              </div>
               <!-- end copy -->
             </div>
           </div>
