--- a/history.html
+++ b/history.html
@@ -74,7 +74,10 @@
 
               <li class="d-flex align-items-center py-4">
                 <img src="/asset/home/user.png" />
-                <a href="#" class="ml-3 text-nuni text-decoration-none">
+                <a
+                  href="index.html"
+                  class="ml-3 text-nuni text-decoration-none"
+                >
                   Profile
                 </a>
               </li>
@@ -83,7 +86,10 @@
             <ul class="m-0 pl-md-3">
               <li class="d-flex align-items-center py-2">
                 <img src="/asset/home/log-out.png" />
-                <a href="#" class="ml-3 text-nuni text-decoration-none">
+                <a
+                  href="index.html"
+                  class="ml-3 text-nuni text-decoration-none"
+                >
                   Logout
                 </a>
               </li>
